verification/output/openjdk_21/invalid/NonBooleanWhile.txt
/data/projects/rajac/verification/sources_invalid/typecheck/NonBooleanWhile.java:3: error: incompatible types: int cannot be converted to boolean
        while (1) {
               ^
1 error
